[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 600, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 480.0
margin_bottom = 600.0
rect_min_size = Vector2( 480, 600 )
color = Color( 0.431373, 0.0313726, 0.0313726, 0.466667 )

[node name="Player" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Timers" type="Node" parent="."]
editor/display_folded = true

[node name="MobTimer" type="Timer" parent="Timers"]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="Timers"]

[node name="StartTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobSpawn" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobSpawn"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="Timers/MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="Timers/ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="Timers/StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
